@@ -188,3 +188,5 @@ Version 1.6.1
 Version 1.6.2
 
 + Added @SafeVarargs annotations
+
+* RubyArray#last(int n) throws IllegalArgumentException if n is < 0
